--- a/InspectorButton/Editor/BMVisualiserEditorAssRef.asmdef
+++ b/InspectorButton/Editor/BMVisualiserEditorAssRef.asmdef
@@ -1,14 +1,16 @@
 {
-    "name": "BehaviourMachineAssembly",
+    "name": "BMVisualiserEditorAssRef",
     "rootNamespace": "",
-    "references": [],
-    "includePlatforms": [],
+    "references": [
+        "GUID:f9f7973fb8aa6724f947b44e5796fc50"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
-    "precompiledReferences": [
-        ""
-    ],
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
